--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1105,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "968d24db",
+   "id": "6c4f619f",
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "968b0cb8",
+   "id": "04d72953",
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1341,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "56962f77",
+   "id": "fe2aba31",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ef5cf79c",
+   "id": "468f9aab",
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0e60cbd3",
+   "id": "a02f6758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1479,7 +1479,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c6f94800",
+   "id": "028b04b6",
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d1af6f36",
+   "id": "fd78878d",
    "metadata": {},
    "outputs": [
     {
@@ -1630,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "24ca77f4",
+   "id": "b9603da5",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4af96b43",
+   "id": "7678d46d",
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "9d044c98",
+   "id": "2dc199cd",
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "9db65f16",
+   "id": "ffd5d0da",
    "metadata": {},
    "outputs": [
     {
@@ -1980,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "15cd7614",
+   "id": "02792bda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1993,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "3692ac82",
+   "id": "5fb07b4d",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "403d93aa",
+   "id": "66b11bb3",
    "metadata": {},
    "outputs": [
     {
@@ -2067,7 +2067,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "640c118c",
+   "id": "6ecb5fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2080,7 +2080,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b0c1e6cf",
+   "id": "c42bdaec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2093,7 +2093,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ad74aab1",
+   "id": "b2995c9e",
    "metadata": {},
    "outputs": [
     {
@@ -2332,7 +2332,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e8802262",
+   "id": "4ba746f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2345,7 +2345,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "1a7c371e",
+   "id": "33be5b17",
    "metadata": {},
    "outputs": [
     {
@@ -2587,7 +2587,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "13527d47",
+   "id": "f4bbed21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2598,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "954c59d4",
+   "id": "222d2986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2611,7 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ce2afa5f",
+   "id": "3012e940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2622,7 +2622,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "336070ea",
+   "id": "377be78f",
    "metadata": {},
    "outputs": [
     {
@@ -2950,7 +2950,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "a8e4915e",
+   "id": "5f274769",
    "metadata": {},
    "outputs": [
     {
@@ -3115,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "23a1cf1a",
+   "id": "c8ae3808",
    "metadata": {},
    "outputs": [
     {
@@ -3434,7 +3434,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "31f96ab0",
+   "id": "6fc4bd6f",
    "metadata": {},
    "outputs": [
     {
@@ -3593,7 +3593,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a92b9780",
+   "id": "42ea0245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3610,7 +3610,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "833669a2",
+   "id": "810d6ded",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3627,7 +3627,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "371116d8",
+   "id": "769d7d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3644,7 +3644,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "a22ec528",
+   "id": "4d414531",
    "metadata": {},
    "outputs": [
     {
@@ -3681,7 +3681,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "6c0d27b0",
+   "id": "089c6c2c",
    "metadata": {},
    "outputs": [
     {
@@ -3786,7 +3786,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "9a2ad73c",
+   "id": "1ab86a31",
    "metadata": {},
    "source": [
     "# Combine each grade level Series for average reading scores by school into a single DataFrame.\n",
@@ -3802,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "c0d861a0",
+   "id": "a3d501e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3815,7 +3815,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "aee42597",
+   "id": "92d1b3de",
    "metadata": {},
    "outputs": [
     {
@@ -3913,7 +3913,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "191b2e3d",
+   "id": "07009be5",
    "metadata": {},
    "outputs": [
     {
@@ -3942,7 +3942,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2387bc99",
+   "id": "2f0cf7f3",
    "metadata": {},
    "outputs": [
     {
@@ -3969,7 +3969,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "aa8e4011",
+   "id": "8678c974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3981,7 +3981,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6b2c305a",
+   "id": "7f70534e",
    "metadata": {},
    "outputs": [
     {
@@ -4337,7 +4337,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b123c09e",
+   "id": "846942a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4356,7 +4356,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "cec7f5b4",
+   "id": "205f9c24",
    "metadata": {},
    "outputs": [
     {
@@ -4475,7 +4475,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "dd9adc65",
+   "id": "d0938ced",
    "metadata": {},
    "outputs": [
     {
@@ -4597,7 +4597,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b9c280b6",
+   "id": "78be818a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4609,7 +4609,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "0287cd2c",
+   "id": "6f23fee1",
    "metadata": {},
    "outputs": [
     {
@@ -4982,7 +4982,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f249ae25",
+   "id": "07207a4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5000,11 +5000,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b74fc2ab",
+   "execution_count": 70,
+   "id": "e3f355ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.821598</td>\n",
+       "      <td>83.929843</td>\n",
+       "      <td>93.550225</td>\n",
+       "      <td>96.099437</td>\n",
+       "      <td>89.883853</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-2000)</th>\n",
+       "      <td>83.374684</td>\n",
+       "      <td>83.864438</td>\n",
+       "      <td>93.599695</td>\n",
+       "      <td>96.790680</td>\n",
+       "      <td>90.621535</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.746417</td>\n",
+       "      <td>81.344493</td>\n",
+       "      <td>69.963361</td>\n",
+       "      <td>82.766634</td>\n",
+       "      <td>58.286003</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Size                                                                     \n",
+       "Small (<1000)                83.821598              83.929843       93.550225   \n",
+       "Medium (1000-2000)           83.374684              83.864438       93.599695   \n",
+       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
+       "\n",
+       "                    % Passing Reading  % Overall Passing  \n",
+       "School Size                                               \n",
+       "Small (<1000)               96.099437          89.883853  \n",
+       "Medium (1000-2000)          96.790680          90.621535  \n",
+       "Large (2000-5000)           82.766634          58.286003  "
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "size_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : size_math_scores,\n",
+    "          \"Average Reading Score\": size_reading_scores,\n",
+    "          \"% Passing Math\": size_passing_math,\n",
+    "          \"% Passing Reading\": size_passing_reading,\n",
+    "          \"% Overall Passing\": size_overall_passing})\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "6290656f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Small (&lt;1000)</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>96</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium (1000-2000)</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Large (2000-5000)</th>\n",
+       "      <td>77.7</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Size                                                                  \n",
+       "Small (<1000)                    83.8                  83.9             94   \n",
+       "Medium (1000-2000)               83.4                  83.9             94   \n",
+       "Large (2000-5000)                77.7                  81.3             70   \n",
+       "\n",
+       "                   % Passing Reading % Overall Passing  \n",
+       "School Size                                             \n",
+       "Small (<1000)                     96                90  \n",
+       "Medium (1000-2000)                97                91  \n",
+       "Large (2000-5000)                 83                58  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting.\n",
+    "size_summary_df[\"Average Math Score\"] = size_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"Average Reading Score\"] = size_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Math\"] = size_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Passing Reading\"] = size_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df[\"% Overall Passing\"] = size_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "size_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "f0c53e9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f92db937",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
   }
  ],
  "metadata": {
